--- a/debian/control
+++ b/debian/control
@@ -1,14 +1,16 @@
 Source: arduino-avr-core
 Section: electronics
 Priority: optional
-Maintainer: Ignacio Losiggio <alumno@unknown>
-Build-Depends: debhelper (>= 9), avr-gcc
+Maintainer: Ignacio Losiggio <iglosiggio@dc.uba.ar>
+Build-Depends: debhelper (>= 9), gcc-avr, avr-libc, avrdude
 Standards-Version: 3.9.8
 Homepage: https://arduino.cc
 #Vcs-Git: https://anonscm.debian.org/collab-maint/arduino-avr-core.git
 #Vcs-Browser: https://anonscm.debian.org/cgit/collab-maint/arduino-avr-core.git
 
 Package: arduino-avr-core
-Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}, avr-gcc, avr-libc, avrdude 
+Architecture: all
+Depends: ${shlibs:Depends}, ${misc:Depends}, gcc-avr, avr-libc, avrdude
 Description: Arduino core for the AVR boards
+ This package contains the bootloaders, firmware, libraries and sourcecode
+ for supporting the AVR-based arduino boards.
